@@ -9,12 +9,17 @@ inc/Module/Install/Win32.pm
 inc/Module/Install/WriteAll.pm
 lib/RDF/Simple/Serialiser/N3.pm
 lib/RDF/Simple/Serialiser/Notation3.pm
+lib/RDF/Simple/Serialiser/NT.pm
+lib/RDF/Simple/Serialiser/NTriples.pm
 lib/RDF/Simple/Serializer/N3.pm
 lib/RDF/Simple/Serializer/Notation3.pm
+lib/RDF/Simple/Serializer/NT.pm
+lib/RDF/Simple/Serializer/NTriples.pm
 Makefile.PL
 MANIFEST			This list of files
 META.yml
 README
 t/foaf-n3.t
+t/foaf-nt.t
 t/pod-coverage.t
 t/pod.t
