@@ -1,0 +1,23 @@
+
+# $Id: NT.pm,v 1.1 2008/07/17 02:51:49 Martin Exp $
+
+package RDF::Simple::Serializer::NT;
+
+use strict;
+use warnings;
+
+use base 'RDF::Simple::Serialiser::NT';
+
+1;
+
+__END__
+
+=head1 NAME
+
+RDF::Simple::Serializer::NT - Output RDF triples in N-Triples format
+
+=head1 DESCRIPTION
+
+This module is just a synonym for L<RDF::Simple::Serialiser::NT>.
+
+=cut
